<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="load_app_notification_channel_id">downloads</string>
    <string name="load_app_notification_channel_name">Downloads</string>
    <string name="load_app_notification_channel_description">Downloads</string>
    <string name="load_app_notification_channel_action">Check the status</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_download">Download</string>
    <string name="button_loading">We are loading</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="download_option_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="download_option_repo">LoadApp - Current repository by Udacity</string>
    <string name="download_option_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="cloud_download_image_description">Cloud download image</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="successful">Successful</string>
    <string name="ok">OK</string>

</resources>
