<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context=".MainActivity"
  tools:showIn="@layout/activity_main">

  <ImageView
    android:id="@+id/download_image"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@color/colorPrimaryDark"
    android:contentDescription="@string/cloud_download_image_description"
    app:layout_constraintBottom_toTopOf="@+id/download_options"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/baseline_cloud_download_24"
    app:tint="@color/colorAccent" />

  <RadioGroup
    android:id="@+id/download_options"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:padding="20dp"
    android:gravity="center_vertical"
    app:layout_constraintBottom_toTopOf="@+id/custom_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/download_image">

    <RadioButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/download_option_glide"
      android:text="@string/download_option_glide" />

    <RadioButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/download_option_repo"
      android:text="@string/download_option_repo" />

    <RadioButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/download_option_retrofit"
      android:text="@string/download_option_retrofit" />
  </RadioGroup>

  <com.udacity.LoadingButton
    android:id="@+id/custom_button"
    android:layout_width="0dp"
    android:layout_height="60dp"
    android:layout_margin="20dp"
    android:background="@color/colorPrimary"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/download_options"
    app:downloadBackgroundColor="@color/colorPrimary"
    app:downloadingBackgroundColor="@color/colorPrimaryDark"
    app:textColor="@color/white"
    app:downloadingCircleBackgroundColor="@color/colorAccent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>