<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/contraint_layout"
  app:layoutDescription="@xml/details_motion_description"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  android:padding="32dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

  <TextView
    android:id="@+id/file_name_description"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/file_name"
    android:textSize="18sp"
    android:textColor="@color/grey"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

  <TextView
    android:id="@+id/status_description"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/status"
    android:textSize="18sp"
    android:textColor="@color/grey"
    app:layout_constraintTop_toBottomOf="@+id/file_name_description"
    app:layout_constraintTop_toTopOf="@+id/status"
    app:layout_constraintStart_toStartOf="parent"/>

  <TextView
    android:id="@+id/file_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:text="Retrofit"
    android:textSize="18sp"
    android:layout_marginStart="32dp"
    android:textColor="@color/black"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toEndOf="@+id/file_name_description"
    />

  <TextView
    android:id="@+id/status"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/successful"
    android:textSize="18sp"
    android:textColor="@color/black"
    android:layout_marginTop="32dp"
    app:layout_constraintTop_toBottomOf="@+id/file_name"
    app:layout_constraintStart_toStartOf="@+id/file_name"/>

  <ImageView
    android:id="@+id/cloud"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:src="@drawable/baseline_cloud_download_24"
    app:layout_constraintTop_toBottomOf="@+id/status"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:tint="@color/colorAccent" />


</androidx.constraintlayout.motion.widget.MotionLayout>